# phoenix

./: .clang-format  .gitignore  CMakeLists.txt  README.md  temp.md  test.c  test.ll  todo.md  types.md  xmake.lua
doc/: README.adoc
spec/: assert.nx  fib.nx
src/cc/include/fancysoft/nxc/: block.hh  cli.hh  exception.hh  file.hh  hlir.hh  lexer.hh  location.hh  logger.hh  mlir.hh  module.hh  node.hh  panic.hh  parser.hh  placement.hh  position.hh  program.hh  safety.hh  storage.hh  target.hh  token.hh  unit.hh  workspace.hh
src/cc/include/fancysoft/nxc/c/: ast.hh  block.hh  cst.hh  file.hh  hlir.hh  lang.hh  lexer.hh  mlir.hh  parser.hh  token.hh
src/cc/include/fancysoft/nxc/macro/: block.hh
src/cc/include/fancysoft/nxc/mlir/: module.hh
src/cc/include/fancysoft/nxc/onyx/: ast.hh  cst.hh  file.hh  hlir.hh  lang.hh  lexer.hh  mlir.hh  parser.hh  safety.hh  token.hh
src/cc/include/fancysoft/nxc/onyx/mlir/: builtin.hh  module.hh
src/cc/include/fancysoft/nxc/util/: radix.hh
src/cc/include/fancysoft/phoenix/: exception.hh  file.hh  lexer.hh  panic.hh  parser.hh  placement.hh  program.hh  target.hh  token.hh  unit.hh  workspace.hh
src/cc/include/fancysoft/phoenix/c/: ast.hh  block.hh  cst.hh  file.hh  lang.hh  lexer.hh  mlir.hh  token.hh
src/cc/include/fancysoft/phoenix/onyx/: ast.hh  ast.plantuml  cst.hh  file.hh  lang.hh  lexer.hh  mlir.hh  token.hh
src/cc/include/fancysoft/phoenix/util/: coro.hh  lambda.hh  logger.hh  map.hh  node.hh  null_stream.hh  pool.hh  radix.hh  random.hh  utf8.hh  variant.hh
src/cc/include/fancysoft/util/: cli.hh  coro.hh  logger.hh  map.hh  null_stream.hh  pool.hh  radix.hh  utf8.hh  variant.hh
src/cc/src/fancysoft/: nxc.cc
src/cc/src/fancysoft/nxc/: cli.cc  file.cc  logger.cc  mlir.cc  module.cc  placement.cc  program.cc
src/cc/src/fancysoft/nxc/c/: ast.cc  block.cc  cst.cc  hlir.cc  lexer.cc  parser.cc
src/cc/src/fancysoft/nxc/mlir/: lower.cc  write.cc
src/cc/src/fancysoft/nxc/onyx/: ast.cc  cst.cc  file.cc  hlir.cc  lexer.cc  parser.cc
src/cc/src/fancysoft/phoenix/: program.cc
src/cc/src/fancysoft/phoenix/c/: lexer.cc
src/cc/src/fancysoft/phoenix/onyx/: ast.cc  cst.cc  file.cc  lexer.cc  token.cc
src/cc/src/fancysoft/phoenix/util/: null_stream.cc  pool.cc  random.cc  utf8.cc
src/cc/src/fancysoft/util/: logger.cc  null_stream.cc  pool.cc  utf8.cc
src/nx/: list.nx  memory.nx  pointer.nx  promise.nx  scheduler.nx  string_buf.nx
src/nx/builtin/: bool.nx  int.nx  memory.nx
src/nx/std/container/: list.nx  poppable.nx  pushable.nx  queue.nx
src/old/cc/: ast_old.hh  ast_old2.hh  ast_old3.hh  mlir_old.hh
src/old/nx/: builtin.nx
src/old/nx/builtin/: array.nx  float.nx  int.nx  lang.nx  pointer.nx  real.nx  tensor.nx
src/old/nx/std/: array.nx  atomic.nx  beginful.nx  box.nx  condvar.nx  endful.nx  enumerable.nx  indexable.nx  list.nx  mappable.nx  memorder.nx  memory.nx  mutex.nx  promise.nx  scheduler.nx  slice.nx  string.nx  string_buf.nx
src/old/nx/std/posix/: file.nx  process.nx
test/cc/fancysoft/nxc/onyx/: parser.cc  scratch.cc
test/cc/fancysoft/phoenix/util/: coro.cc  pool.cc  utf8.cc  variant.cc
test/cc/fancysoft/util/: coro.cc  flatten_variant.cc  pool.cc
test/nx.ir/: fib.nx.ir
